apps/production/tiketin-v2-be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prod
  name: tiketin-v2-be
  labels:
    app: tiketin-v2-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tiketin-v2-be
  template:
    metadata:
      labels:
        app: tiketin-v2-be
    spec:
      containers:
        - name: tiketin-v2-be
          image: docker.io/dta32/tiketin-v2-be:2e679c7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
