apps/production/tiketin-v2-be/envoy-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tiketin-v2-be
  namespace: envoy
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy
      sectionName: tiketin-api
  hostnames:
    - api.tiketin.dta32.my.id
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tiketin-v2-be-service
          namespace: prod
          port: 80
